--- a/index.html
+++ b/index.html
@@ -393,6 +393,43 @@
             </div>
         </div>
     </footer>
+
+    <div class="modal-overlay is-open ">
+        <div class="modal">
+            <h2>Leave your contacts and we will call you back</h2>
+            <form>
+                <label>
+                    Name
+                    <input type="text" name="name" autofocus />
+                </label>
+
+                <label>
+                    Phone
+                    <input type="tel" name="phone" />
+                </label>
+
+                <label>
+                    Email
+                    <input type="email" name="email" />
+                </label>
+
+                <label>
+                    Comment
+                    <textarea name="comment" rows="5" placeholder="Text input"></textarea>
+                </label>
+
+                <label>
+                    <input type="checkbox" name="agreement" value="agreement" />
+                    I accept the terms and conditions of the <a href>Privacy Policy</a>
+                </label>
+
+                <button type="submit">Send</button>
+            </form>
+
+        </div>
+    </div>
+
+
 </body>
 
 </html>
