--- a/index.html
+++ b/index.html
@@ -391,10 +391,26 @@
                     </li>
                 </ul>
             </div>
+            <div class="subscribe-container">
+                <p class="subscribe-text">
+                    Subscribe
+                </p>
+                <form class="subscribe-form">
+                    <label class="subscribe-form-label">
+                        <input type="email" name="email" placeholder="E-mail" class="subscribe-form-input" />
+                    </label>
+                    <button type="submit" class="subscribe-form-submit">
+                        Subscribe
+                        <svg class="subscribe-form-submit-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
 
-    <div class="modal-overlay is-open ">
+    <div class="modal-overlay ">
         <div class="modal">
             <h2>Leave your contacts and we will call you back</h2>
             <form>
