--- a/index.html
+++ b/index.html
@@ -410,9 +410,14 @@
         </div>
     </footer>
 
-    <div class="modal-overlay ">
+    <div class="modal-overlay is-open">
         <div class="modal">
-            <h2>Leave your contacts and we will call you back</h2>
+            <button type="button" class="feedback-button-close">
+                <svg width="8" height="8" class="feedback-button-close-icon">
+                    <use href="./images/icons.svg#icon-f-close"></use>
+                </svg>
+            </button>
+            <p class="feedback-title">Leave your contacts and we will call you back</p>
             <form>
                 <label>
                     Name
@@ -439,7 +444,7 @@
                     I accept the terms and conditions of the <a href>Privacy Policy</a>
                 </label>
 
-                <button type="submit">Send</button>
+                <button type="subигmit">Send</button>
             </form>
 
         </div>
