--- a/index.html
+++ b/index.html
@@ -419,10 +419,11 @@
             </button>
             <p class="feedback-title">Leave your contacts and we will call you back</p>
             <form>
-                <label>
-                    Name
-                    <input type="text" name="name" autofocus />
-                </label>
+                <div class="feedback-form-item-container">
+                    <label class="feedback-form-item-label" for="user-name">Name</label>
+                    <input type="text" name="user-name" autofocus />
+                </div>
+
 
                 <label>
                     Phone
@@ -444,7 +445,7 @@
                     I accept the terms and conditions of the <a href>Privacy Policy</a>
                 </label>
 
-                <button type="subигmit">Send</button>
+                <button type="submit">Send</button>
             </form>
 
         </div>
