add more form styles

--- a/index.html
+++ b/index.html
@@ -421,19 +421,33 @@
             <form>
                 <div class="feedback-form-item-container">
                     <label class="feedback-form-item-label" for="user-name">Name</label>
-                    <input type="text" name="user-name" autofocus />
+                    <div class="feedback-form-item-input-container">
+                        <input class="feedback-form-item-input" id="user-name" name="user-name" type="text" />
+                        <svg class="feedback-form-item-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-f-person"></use>
+                        </svg>
+                    </div>
                 </div>
 
+                <div class="feedback-form-item-container">
+                    <label class="feedback-form-item-label" for="phone">Phone</label>
+                    <div class="feedback-form-item-input-container">
+                        <input class="feedback-form-item-input" id="phone" name="phone" type="phone" />
+                        <svg class="feedback-form-item-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-f-phone"></use>
+                        </svg>
+                    </div>
+                </div>
 
-                <label>
-                    Phone
-                    <input type="tel" name="phone" />
-                </label>
-
-                <label>
-                    Email
-                    <input type="email" name="email" />
-                </label>
+                <div class="feedback-form-item-container">
+                    <label class="feedback-form-item-label" for="email">Email</label>
+                    <div class="feedback-form-item-input-container">
+                        <input class="feedback-form-item-input" id="email" name="email" type="email" />
+                        <svg class="feedback-form-item-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-f-mail"></use>
+                        </svg>
+                    </div>
+                </div>
 
                 <label>
                     Comment
@@ -445,7 +459,7 @@
                     I accept the terms and conditions of the <a href>Privacy Policy</a>
                 </label>
 
-                <button type="submit">Send</button>
+                <button type="submit" class="feedback-form-submit">Send</button>
             </form>
 
         </div>
