--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 <div class="feedback-form-item-container">
                     <label class="feedback-form-item-label" for="phone">Phone</label>
                     <div class="feedback-form-item-input-container">
-                        <input class="feedback-form-item-input" id="phone" name="phone" type="phone" />
+                        <input class="feedback-form-item-input" id="phone" name="phone" type="tel" />
                         <svg class="feedback-form-item-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-f-phone"></use>
                         </svg>
@@ -449,15 +449,25 @@
                     </div>
                 </div>
 
-                <label>
-                    Comment
-                    <textarea name="comment" rows="5" placeholder="Text input"></textarea>
-                </label>
+                <div class="feedback-form-comment-container">
+                    <label class="feedback-form-item-label" for=" user-comment">Comment</label>
+                    <textarea class="feedback-form-comment" id="user-comment" name="user-comment" rows="5"
+                        placeholder="Text input"></textarea>
+                </div>
 
-                <label>
-                    <input type="checkbox" name="agreement" value="agreement" />
-                    I accept the terms and conditions of the <a href>Privacy Policy</a>
-                </label>
+
+                <div class="feedback-form-user-privacy-container">
+                    <input class="visually-hidden" id="user-privacy" type="checkbox" name="user-privacy" value="true" />
+                    <label for="user-privacy" class="feedback-form-user-privacy">I accept the terms and conditions of
+                        the
+                        <span class="feedback-form-user-privacy-span">
+                            <svg class="feedback-form-item-icon" width="10" height="8">
+                                <use href="./images/icons.svg#icon-f-checked"></use>
+                            </svg>
+                        </span>
+                        <a href="feedback-form-user-privacy-link">Privacy Policy</a>
+                    </label>
+                </div>
 
                 <button type="submit" class="feedback-form-submit">Send</button>
             </form>
