--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 </div>
 
                 <div class="feedback-form-comment-container">
-                    <label class="feedback-form-item-label" for=" user-comment">Comment</label>
+                    <label class="feedback-form-item-label" for="user-comment">Comment</label>
                     <textarea class="feedback-form-comment" id="user-comment" name="user-comment" rows="5"
                         placeholder="Text input"></textarea>
                 </div>
@@ -458,14 +458,14 @@
 
                 <div class="feedback-form-user-privacy-container">
                     <input class="visually-hidden" id="user-privacy" type="checkbox" name="user-privacy" value="true" />
-                    <label for="user-privacy" class="feedback-form-user-privacy">I accept the terms and conditions of
-                        the
-                        <span class="feedback-form-user-privacy-span">
+                    <label for="user-privacy" class="feedback-form-user-privacy">
+                        <span class="feedback-form-user-privacy-span checked">
                             <svg class="feedback-form-item-icon" width="10" height="8">
                                 <use href="./images/icons.svg#icon-f-checked"></use>
                             </svg>
                         </span>
-                        <a href="feedback-form-user-privacy-link">Privacy Policy</a>
+                        I accept the terms and conditions of the <a class="feedback-form-user-privacy-link"
+                            href="">Privacy Policy</a>
                     </label>
                 </div>
 
