fix checkbox and icons

--- a/index.html
+++ b/index.html
@@ -459,9 +459,9 @@
                 <div class="feedback-form-user-privacy-container">
                     <input class="visually-hidden" id="user-privacy" type="checkbox" name="user-privacy" value="true" />
                     <label for="user-privacy" class="feedback-form-user-privacy">
-                        <span class="feedback-form-user-privacy-span checked">
-                            <svg class="feedback-form-item-icon" width="10" height="8">
-                                <use href="./images/icons.svg#icon-f-checked"></use>
+                        <span class="feedback-form-user-privacy-span">
+                            <svg class="feedback-form-checkbox-icon" width="10" height="8">
+                                <use href="./images/icons.svg#icon-f-checkbox"></use>
                             </svg>
                         </span>
                         I accept the terms and conditions of the <a class="feedback-form-user-privacy-link"
